--- a/client/src/index.css
+++ b/client/src/index.css
@@ -619,6 +619,12 @@ textarea.form-input {
   justify-content: center;
 }
 
+/* DEBUG: Temporary debug border class */
+.debug-border-orange {
+  border: 3px solid #f59e0b !important;
+  background: var(--color-bg-tertiary) !important;
+}
+
 
 
 
