--- a/client/src/index.css
+++ b/client/src/index.css
@@ -619,8 +619,9 @@ textarea.form-input {
   justify-content: center;
 }
 
-/* DEBUG: Temporary debug border class */
-.debug-border-orange {
+/* DEBUG: Temporary debug border class - high specificity to override .bottom-sheet>.card */
+.bottom-sheet>.card.debug-border-orange,
+.card.debug-border-orange {
   border: 3px solid #f59e0b !important;
   background: var(--color-bg-tertiary) !important;
 }
